--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,8 @@
-﻿async-lru
-beautifulsoup4
-fastapi
-Flask
-wordcloud
-uvicorn
-scikit-learn
-scipy
-matplotlib
-fuzzywuzzy
-pandas
-numpy
+pandas==1.3.3
+fastapi==0.100.1
+scikit-learn==0.24.2
+surprise==0.1
+typing==3.7.4.3
+typing_extensions==4.7.1
+uvicorn==0.15.0
+psutil==5.8.0
